# oceanalysis

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data_config/: POP2.yml  constants.yml
deprecated/: ECCOv4_regrid_1deg.yml
deprecated/models/: pop2_lr.py
model_config/: POP2-LR.yml
models/: POP2-LR.yml  straits_def_gx1v6.txt
models/POP2-LR/: POP2-LR.py
oceanalysis/: __init__.py  _proxy.py  data.py  grid.py  model.py  pop_lr.py
oceanalysis/compute/: __init__.py  amoc.py
oceanalysis/data/: __init__.py  constants.py  var.py
oceanalysis/diagnostics/: __init__.py  amoc.py  base.py  overturning.py  projection.py  streamfunction.py  utils.py
oceanalysis/model/: __init__.py  grid.py
test/: test.ipynb  test.py
tests/: test.ipynb  test_api.py
